--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -181,16 +181,20 @@ QLineEdit#groupNameField:focus, #userNameLineEdit:focus
     selection-color: rgb(40, 40, 40);
 }
 
-QLineEdit#groupNameField-topLevel,
-#userNameLineEdit-topLevel
+QLineEdit#groupNameField-topLevel
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-         stop: 0.1 rgb(63, 63, 63),
-         stop: 0.8 rgb(47, 47, 47));
+    background-color: qlineargradient(x1:0, y1:0, x2:1 y2:0,
+         stop: 0.1 rgb(47, 47, 47),
+         stop: 0.5 rgb(63, 63, 63),
+         stop: 1.0 rgb(47, 47, 47));
 }
 
 #userNameLineEdit-topLevel
 {
+    background-color: qlineargradient(x1:0, y1:0, x2:1 y2:0,
+         stop: 0.1 rgb(55, 55, 55),
+         stop: 0.5 rgb(85, 85, 85),
+         stop: 1.0 rgb(55, 55, 55));
     border: none;
 }
 
