--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -135,7 +135,10 @@ QLineEdit#groupNameField:focus
 QLineEdit#groupNameField-topLevel,
 #userNameLineEdit-topLevel
 {
-    background-color: white;
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 white,
+        stop: 0.5 rgb(235, 235, 235),
+        stop: 1.0 white);
 }
 
 #userNameLineEdit-topLevel
