--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -172,15 +172,19 @@ QLineEdit:focus
 
 QLineEdit#groupNameField-topLevel
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
          stop: 0.1 rgb(244, 178, 74),
-         stop: 0.5 rgb(250, 208, 110));
+         stop: 0.5 rgb(250, 208, 110),
+         stop: 1.0 rgb(244, 178, 74));
     border-color: rgba(90, 90, 90, 90);
 }
 
 #userNameLineEdit-topLevel
 {
-    background-color: rgb(210, 142, 100);
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(210, 142, 100),
+        stop: 0.5 rgb(250, 208, 110),
+        stop: 1.0 rgb(210, 142, 100));
     border: none;
 }
 
