fine tuning some theme colors

--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -200,15 +200,12 @@ QLineEdit#groupNameField-topLevel
 
 QLineEdit#chatText-topLevel
 {
-    background-color: rgb(180, 180, 180);
+    color: black;
     border-color: rgba(0, 0, 0, 160);
-}
-
-QLineEdit#chatText-topLevel
-{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 rgb(20, 20, 20),
-        stop: 0.5 rgb(180, 180, 180),
+        stop: 0.3 rgb(180, 180, 180),
+        stop: 0.7 rgb(180, 180, 180),
         stop: 1.0 rgb(20, 20, 20));
 }
 
