Fixing input text styles colors for all themes [VST plugin] (#699)
* fixing local channel name bkgr color

* volcano channel name fix

* Ice theme local track channel name bckgr color fix

* black theme user/channel name color fix

* match loc trk borders stdlne and vst

* volcano loc trk borders stdlne and vst mtch

* chat input border match stdlne-vst

* fix black theme chat input text font color

* private server combo box border match

* fixing most chat and dialogs palette

* fix all themes -topLevel suffix

* updating some dialog.css

* deleting wrong code

* delete borders from panelcombos qlineEdit

* delete borders from usernamepanel qlineEdit

* match chattext borders to standalone

* match local groupnamefield borders to standalone

* little color matches for black and volcano

* new QlineEdit differentiation for chatText

* fixing unintentional change

* change new panelcombos QlineEdit color

* change usr-channl name color for new QlineEdit

* fine tuning some theme colors

* black theme fixes

* improve chat text new qlineEdit

--- a/src/resources/css/themes/Black_nm/General.css
+++ b/src/resources/css/themes/Black_nm/General.css
@@ -181,6 +181,35 @@ QLineEdit#groupNameField:focus, #userNameLineEdit:focus
     selection-color: rgb(40, 40, 40);
 }
 
+QLineEdit#groupNameField-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1 y2:0,
+         stop: 0.1 rgb(47, 47, 47),
+         stop: 0.5 rgb(85, 85, 85),
+         stop: 1.0 rgb(47, 47, 47));
+}
+
+#userNameLineEdit-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1 y2:0,
+         stop: 0.1 rgb(55, 55, 55),
+         stop: 0.5 rgb(85, 85, 85),
+         stop: 1.0 rgb(55, 55, 55));
+    border: none;
+}
+
+QLineEdit#chatText-topLevel
+{
+    color: black;
+    border-color: rgba(0, 0, 0, 160);
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(140, 140, 140),
+        stop: 0.3 rgb(180, 180, 180),
+        stop: 0.7 rgb(180, 180, 180),
+        stop: 1.0 rgb(140, 140, 140));
+}
+
+
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
 
 QSlider::groove:vertical
