--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -248,3 +248,24 @@ NinjamPanel QComboBox               /* bpi, bpm, accents and shape comboboxes */
 {
     background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 30), stop:1 rgba(0, 0, 0, 50));
 }
+
+#comboBpi-topLevel
+{
+    border: none;
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop:0 rgb(185, 185, 185),
+        stop:0.1 rgb(206, 206, 206),
+        stop:0.45 rgb(206, 206, 206),
+        stop:0.6 rgb(185, 185, 185),
+        stop:1 rgb(185, 185, 185));
+}
+
+#comboBpm-topLevel
+{
+        background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop:0 rgb(172, 172, 172),
+        stop:0.1 rgb(206, 206, 206),
+        stop:0.45 rgb(206, 206, 206),
+        stop:0.6 rgb(172, 172, 172),
+        stop:1 rgb(172, 172, 172));
+}
