--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -132,6 +132,29 @@ QLineEdit#groupNameField:focus
     color: black;
 }
 
+QLineEdit#groupNameField-topLevel,
+#userNameLineEdit-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 white,
+        stop: 0.5 rgb(235, 235, 235),
+        stop: 1.0 white);
+}
+
+#userNameLineEdit-topLevel
+{
+    border: none;
+}
+
+QLineEdit#chatText-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(235, 235, 235),
+        stop: 0.3 white,
+        stop: 0.7 white,
+        stop: 1.0 rgb(235, 235, 235));
+    border-color: rgba(0, 0, 0, 160);
+}
 
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
