--- a/src/resources/css/themes/Ice/General.css
+++ b/src/resources/css/themes/Ice/General.css
@@ -146,6 +146,35 @@ QLineEdit#groupNameField:focus
     border-color: rgba(0, 0, 0, 120)
 }
 
+QLineEdit#groupNameField-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(96, 169, 232),
+        stop: 0.5 rgb(180, 207, 250),
+        stop: 1.0 rgb(96, 169, 232));
+    border-color: rgba(0, 0, 0, 120);
+    border-radius: 6px;
+}
+
+#userNameLineEdit-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(129, 194, 230),
+        stop: 0.5 rgb(180, 207, 250),
+        stop: 1.0 rgb(129, 194, 230));
+    border: none;
+}
+
+QLineEdit#chatText-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+    stop: 0.0 rgb(180, 207, 250),
+    stop: 0.3 rgb(202, 242, 242),
+    stop: 0.7 rgb(202, 242, 242),
+    stop: 1.0 rgb(180, 207, 250));
+    border-color: rgba(0, 0, 0, 160);
+}
+
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
 
