--- a/src/resources/css/themes/Rounded/General.css
+++ b/src/resources/css/themes/Rounded/General.css
@@ -171,8 +171,29 @@ QLineEdit[enabled="false"]
     border: none;
 }
 
+QLineEdit#groupNameField-topLevel,
+#userNameLineEdit-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(197, 197, 197),
+        stop: 0.5 rgb(225, 225, 225),
+        stop: 1.0 rgb(197, 197, 197));
+}
 
+#userNameLineEdit-topLevel
+{
+    border: none;
+}
 
+QLineEdit#chatText-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(197, 197, 197),
+        stop: 0.3 rgb(225, 225, 225),
+        stop: 0.7 rgb(225, 225, 225),
+        stop: 1.0 rgb(197, 197, 197));
+    border: 1px solid #919191;
+}
 
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
