--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -170,6 +170,33 @@ QLineEdit:focus
     selection-color: rgb(254, 181, 102);
 }
 
+QLineEdit#groupNameField-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+         stop: 0.1 rgb(244, 178, 74),
+         stop: 0.5 rgb(250, 208, 110),
+         stop: 1.0 rgb(244, 178, 74));
+    border-color: rgba(90, 90, 90, 90);
+}
+
+#userNameLineEdit-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(210, 142, 100),
+        stop: 0.5 rgb(250, 208, 110),
+        stop: 1.0 rgb(210, 142, 100));
+    border: none;
+}
+
+QLineEdit#chatText-topLevel
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(223, 174, 144),
+        stop: 0.3 rgb(235, 203, 184),
+        stop: 0.7 rgb(235, 203, 184),
+        stop: 1.0 rgb(223, 174, 144));
+    border-color: rgba(0, 0, 0, 160);
+}
 
 
 /*  SLIDERs ++++++++++++++++++++++++++++++++ */
