--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -201,6 +201,18 @@ selection-background-color: rgba(0, 0, 0, 90);
 selection-color: rgb(254, 181, 102);
 }
 
+#comboBpi-topLevel,
+#comboBpm-topLevel
+{
+    border: none;
+    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
+        stop: 0.0 rgb(184, 149, 124),
+        stop: 0.1 rgb(227, 183, 153),
+        stop: 0.45 rgb(227, 183, 153),
+        stop: 0.6 rgb(184, 149, 124),
+        stop: 1.0 rgb(184, 149, 124));
+}
+
 NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
 {
     border: 1px solid rgb(130, 130, 130);
