--- a/src/resources/css/themes/Ice/NinjamWindow.css
+++ b/src/resources/css/themes/Ice/NinjamWindow.css
@@ -282,7 +282,9 @@ NinjamTrackView  #channelName
 /* The floating window showing the metronome/interval progress */
 IntervalProgressWindow
 {
-    background-color: rgb(144, 182, 193);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 rgb(139, 179, 194),
+        stop: 1.0 rgb(78, 137, 219));
 }
 
 IntervalProgressDisplay
