--- a/src/resources/css/themes/Rounded/Dialogs.css
+++ b/src/resources/css/themes/Rounded/Dialogs.css
@@ -12,6 +12,14 @@ MidiToolsDialog
     border-radius: 2px;
 }
 
+LooperWindow
+{
+    /* using same chat tab background color */
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0     rgb(130, 130, 130),
+        stop: 1.0   rgb(140, 140, 140));
+}
+
 PluginScanDialog
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
