--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -14,6 +14,21 @@
    <string>Dialog</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>12</number>
+   </property>
+   <property name="leftMargin">
+    <number>6</number>
+   </property>
+   <property name="topMargin">
+    <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>6</number>
+   </property>
+   <property name="bottomMargin">
+    <number>6</number>
+   </property>
    <item>
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -97,9 +112,12 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="labelPlayMode">
         <property name="text">
-         <string>Play Mode:</string>
+         <string>Play Mode</string>
+        </property>
+        <property name="buddy">
+         <cstring>comboBoxPlayMode</cstring>
         </property>
        </widget>
       </item>
@@ -123,9 +141,12 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="labelMaxLayers">
         <property name="text">
-         <string>Max. Layers:</string>
+         <string>Max. Layers</string>
+        </property>
+        <property name="buddy">
+         <cstring>maxLayersSpinBox</cstring>
         </property>
        </widget>
       </item>
