replacing boost buttons with one 3-state button

--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -3,11 +3,9 @@
 */
 
 
-/* Basic boost (-12, 0, +12) buttons stylesheet:
+/* Basic boost (-12, 0, +12) button stylesheet:
 --------------------------------------*/
-#buttonBoostMinus12,
-#buttonBoostPlus12,
-#buttonBoostZero
+#buttonBoost
 {
    margin: 0px;
    font-size: 8px;
