Colorizing looper window buttons
- Using red when rec button is pressed
- Using yellow when rec button is pressed but looper is in waiting state
- Using green when play button is pressed
- Dropping stop button, now rec and play are toggle buttons.

--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -65,26 +65,6 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="buttonStop">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources/jamtaba.qrc">
-          <normaloff>:/images/stop.png</normaloff>:/images/stop.png</iconset>
-        </property>
-        <property name="checkable">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="QPushButton" name="buttonPlay">
         <property name="text">
          <string/>
@@ -92,6 +72,9 @@
         <property name="icon">
          <iconset resource="../../resources/jamtaba.qrc">
           <normaloff>:/images/play.png</normaloff>:/images/play.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
