--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -319,3 +319,18 @@ LooperWindow #layersWidget
 {
     background-color: rgba(0, 0, 0, 10);
 }
+
+LooperWindow #buttonPlay:checked
+{
+    background-color: rgb(0, 195, 0);
+}
+
+LooperWindow #buttonRec:checked
+{
+    background-color: rgb(255, 0, 0);
+}
+
+LooperWindow #buttonRec[waiting=true]:checked
+{
+    background-color: rgb(255, 255, 0);
+}
