--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -88,7 +88,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>24</width>
+          <width>18</width>
           <height>20</height>
          </size>
         </property>
@@ -117,7 +117,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>24</width>
+          <width>18</width>
           <height>20</height>
          </size>
         </property>
@@ -145,13 +145,29 @@
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>40</width>
+          <width>18</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBoxHearLayersWhileRecording">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Hear layers while recording</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
