Implementing State design pattern in Looper

--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -172,7 +172,7 @@
       <item>
        <widget class="QCheckBox" name="checkBoxOverdub">
         <property name="text">
-         <string>Overdub</string>
+         <string>Overdub recording</string>
         </property>
        </widget>
       </item>
